[gd_scene load_steps=5 format=3 uid="uid://dnn5p52tfmf1d"]

[ext_resource type="Script" uid="uid://yi0sgrwmq733" path="res://entities/abilities/ability.gd" id="1_tf6v8"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tf6v8"]
transparency = 1
albedo_color = Color(1, 0, 0, 0.490196)

[sub_resource type="CylinderMesh" id="CylinderMesh_8y0x8"]
top_radius = 2.0
bottom_radius = 2.0
height = 1.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_gruh6"]
height = 1.0
radius = 2.0

[node name="Area3D" type="Area3D"]
script = ExtResource("1_tf6v8")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_tf6v8")
mesh = SubResource("CylinderMesh_8y0x8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_gruh6")

[node name="Lifetime" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="DamageTickTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Lifetime" to="." method="_on_lifetime_timeout"]
[connection signal="timeout" from="DamageTickTimer" to="." method="_on_damage_tick_timer_timeout"]
